--- a/03-bases-node/package.json
+++ b/03-bases-node/package.json
@@ -9,6 +9,7 @@
   "author": "codemvs",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.3.1",
     "yargs": "^12.0.1"
   },
   "devDependencies": {}
