--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-**/03-bases-node/node_modules/
-**/03-bases-node/package-lock.json
-**/04-to-do/node_modules/
-**/04-to-do/package-lock.json
+node_modules
+package-lock.json
+
